More z-index fixes

--- a/css/style.css
+++ b/css/style.css
@@ -606,7 +606,7 @@ header:after {
   background: url("http://library.bc.edu/connolly/themes/CustomTheme/img/header.png") no-repeat 20% 100%;
   background-size: cover;
   border-bottom: 2px solid #dedede;
-  z-index: 1000;
+  z-index: 0;
 }
 
 @media ( max-width: 800px ) {
